@@ -1,3 +1,7 @@
+2005-06-02 Thomas Houssin <Thomas.Houssin@sourcemage.org>
+	* latest.defaults: updated latest to grsecurity-2.1.5-2.6.11.11-200505121617.patch
+	* info/patches/grsecurity_2_6/grsecurity-2.1.5-2.6.11.11-200505121617.patch: added
+
 2005-06-01 David Brown <dmlb2000@excite.com>
 	* latest.defaults: updated latest to 2.6.12-rc5-mm2
 	* info/patches/mm_patches/2.6.12-rc5-mm2: added
